<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/lly_forgot_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:fitsSystemWindows="true"
        android:layout_marginBottom="0dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/txt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudoku"
            android:textAllCaps="false"
            android:layout_marginStart="0dp"
            android:visibility="visible"
            android:gravity="start"
            android:layout_marginEnd="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:background="@drawable/textview_ripple"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_countDown"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/_60"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/visby_round_cf_regular"
            android:background="@drawable/text_background"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="60"
        android:minHeight="10dp"
        android:minWidth="200dp"
        android:progress="0" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp">

            <!--<android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_sudoku"
                style="@style/Toolbar">
            </android.support.v7.widget.Toolbar>-->

            <TableLayout
                android:background="#2B2B2B"
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TableLayout>

            <TableLayout
                android:id="@+id/digit_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_2"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_3"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_4"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_5"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_6"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_7"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_8"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_9"
                        android:textSize="18sp" />
                </TableRow>
                <TableRow>
                    <Space/>
                    <Button
                        android:id="@+id/newGameBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/new_game_btn"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/new_game"
                        android:textColor="#FFFFFF" />
                    <Space/>
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/scBtn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_5"
                        android:visibility="gone"
                        android:layout_marginStart="4sp"
                        android:layout_marginEnd="2sp"
                        android:background="@drawable/sc_button" />
                    <Button
                        android:id="@+id/scBtn10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_10"
                        android:visibility="gone"
                        android:layout_marginStart="2sp"
                        android:layout_marginEnd="2sp"
                        android:background="@drawable/sc_button"/>
                    <Button
                        android:id="@+id/scBtn15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_15"
                        android:visibility="gone"
                        android:layout_marginStart="2sp"
                        android:layout_marginEnd="2sp"
                        android:background="@drawable/sc_button"/>
                    <Button
                        android:id="@+id/scBtn20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_20"
                        android:visibility="gone"
                        android:layout_marginStart="2sp"
                        android:layout_marginEnd="2sp"
                        android:background="@drawable/sc_button"/>
                    <Button
                        android:id="@+id/scBtn25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_25"
                        android:visibility="gone"
                        android:layout_marginStart="2sp"
                        android:layout_marginEnd="4sp"
                        android:background="@drawable/sc_button"/>
                </TableRow>
            </TableLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>